# langhuan-agentic-knowledge-system

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.js  index.html  langhuan.toml.example  pyproject.toml  styles.css
docs/: ARCHITECTURE.md
examples/demo-vault/Home/: Home.md
examples/demo-vault/Projects/: RAG.md
examples/demo-vault/Sources/Books/: Example.md
integrations/: README.md
integrations/honcho/: README.md
integrations/langfuse/: .env.example  README.md
integrations/loongsuite-agentloop/: .env.example  README.md
showcase/: README.md  index.html  styles.css
src/langhuan/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  events.py  index.py  reader.py  search.py
tests/: test_core.py  test_showcase.py
